# memory-driven-growth-agent

./: .gitignore  AGENTS.md  PRD V1.md  README.md  TECH COMPARISON V0.md  TECH COMPARISON V1.md  TECH DESIGN V1.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: graph.py  state.py
app/api/: chat_api.py  memory_api.py  pattern_api.py  task_api.py
app/core/: config.py  exceptions.py  logger.py  prompt_loader.py
app/models/: __init__.py  conversation.py  memory.py  method.py  pattern.py  safety_log.py  task.py  user.py
app/repositories/: conversation_repo.py  memory_repo.py  method_repo.py  pattern_repo.py  safety_log_repo.py  task_repo.py  user_repo.py
app/schemas/: chat_schema.py  memory_schema.py  pattern_schema.py  task_schema.py
app/services/: intervention_service.py  llm_service.py  memory_provider.py  memory_service.py  normalization.py  pattern_service.py  task_service.py  vector_service.py
data/demo/: phase6_demo_inputs.json
data/prompt_tests/: mvp_prompt_test_set.jsonl
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  main.tsx  styles.css
scripts/: init_db.py  init_project.ps1
tests/: test_prompt_extraction_rate.py  test_prompt_test_set.py
tests/test_api/: test_chat_phase2_api.py  test_chat_phase3_api.py  test_chat_phase6_api.py  test_chat_simple_api.py  test_memory_phase6_api.py  test_pattern_api.py  test_phase1_models.py  test_schema_imports.py  test_task_api.py
tests/test_nodes/: test_phase2_nodes.py  (+6 more)
(+34 files in other folders)
