[project]
name = "memory-driven-growth-agent"
version = "0.1.0"
description = "Memory-driven growth coaching agent MVP."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "langgraph>=0.2,<1.0",
  "langchain-core>=0.3,<1.0",
  "motor>=3.5,<4.0",
  "pymongo>=4.8,<5.0",
  "pymilvus>=2.4,<3.0",
  "jinja2>=3.1,<4.0",
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
